environments/gloo-platform/gwapi-mgmt-gm-workers/mgmt/gateway-api-config/base/gateway-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http
  namespace: gloo-system
  labels:
    gateway: https
spec:
  gatewayClassName: gloo-gateway
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: "*.glootest.com"
      allowedRoutes:
        namespaces:
          from: All
