environments/gloo-platform/gwapi-mgmt-gm-workers/mgmt/gateway-api-config/base/grafana-https.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana-https
  namespace: gloo-system
  labels:
    example: grafana-route
    gateway: https
spec:
  hostnames:
  - "grafana.glootest.com"
  parentRefs:
    - name: https
      namespace: gloo-system
  rules:
    - backendRefs:
        - name: glooe-grafana
          port: 80
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.solo.io
          kind: RouteOption
          name: grafana-route-policies
